# gcnn_dmri

./: .cruft.json  .pre-commit-config.yaml  CHANGELOG.md  LICENCE  README.md  README_template.md  Training.py  checkBvecSeprations.py  checkData.py  createDownSample.py  createPrediction.py  createTraining.py  cut_masks.py  cutnifti.py  dataGrab.py  dataLoader.py  diffusion.py  dihedral12.py  extract3dDiffusion.py  gPyTorch.py  getData.py  icosahedron.py  loadModel.py  makePrediction.py  metrics.py  mkdocs.yml  networkTesting.py  niceData.py  nifti2traintest.py  predicting.py  predictingDTI.py  predictingResidual.py  predictingResidualScalar.py  predictingScalar.py  predicting_script.py  preprocessing.py  pyproject.toml  requirements.txt  residual2d.py  residual5d.py  (+13 more)
.github/workflows/: test.yml
data/fromOldImplementation/: X_test_podal.npy  X_test_test.npy  Y_test_podal.npy  Y_test_test.npy  Y_train_test.npy
dataHandling/: dtifit_on_subjects.sh  freesurfer_masks.sh  subject_list_generator.py
dataHandling/subjects_lists/: testing.txt  training.txt  training_.txt
dgcnn/: cutnifti.py  gPyTorch.py  geodesic.py  icosahedron.py  metrics.py
dgcnn/example_scripts/: predicting_script.py
docs/: api_docs.md
src/dgcnn/: cutnifti.py  dataGrab.py  diffusion.py  dihedral12.py  gPyTorch.py  geodesic.py  predictingScalar.py  preprocessing.py  trainingScalars.py
src/dgcnn/example_scripts/: niceData.py  predicting_script.py  training_script.py
src/gcnn_dmri/: dataGrab.py  icosahedron.py  metrics.py
